<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECEBEB"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvArray"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/lightYellow"
        android:hint="@string/emptyarray"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/edPrice"
        app:layout_constraintStart_toStartOf="@+id/edPrice"
        app:layout_constraintTop_toBottomOf="@+id/btEnter" />

    <EditText
        android:id="@+id/edPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/lightYellow"
        android:backgroundTint="#FFFDEB"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="number"
        android:minHeight="48dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/btEnter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/enter"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/edPrice"
        app:layout_constraintStart_toStartOf="@+id/edPrice"
        app:layout_constraintTop_toBottomOf="@+id/edPrice" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#DCFFDE"
        android:hint="@string/discountPrice"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/edPrice"
        app:layout_constraintStart_toStartOf="@+id/edPrice"
        app:layout_constraintTop_toBottomOf="@+id/tvArray" />

    <EditText
        android:id="@+id/edDiscount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/discount"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/edPrice"
        app:layout_constraintStart_toStartOf="@+id/edPrice"
        app:layout_constraintTop_toBottomOf="@+id/tvResult"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edOffset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/offset"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/edPrice"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edPrice"
        app:layout_constraintTop_toBottomOf="@+id/edDiscount"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edReadLength"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/readLength"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/edPrice"
        app:layout_constraintStart_toStartOf="@+id/edPrice"
        app:layout_constraintTop_toBottomOf="@+id/edOffset"
        android:autofillHints="" />

    <Button
        android:id="@+id/btRun"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/run"
        app:layout_constraintEnd_toEndOf="@+id/edPrice"
        app:layout_constraintStart_toStartOf="@+id/edPrice"
        app:layout_constraintTop_toBottomOf="@+id/edReadLength" />

    <TextView
        android:id="@+id/launch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>